tests/MathML/basic/bad/badBvar1.mml



<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mtable>
    <mtr>
      <mtd>
        <mtext>correct:</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <ci>x</ci> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>correct w/ degree</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <ci>x</ci> 
          <degree>
            <cn>2</cn> 
          </degree> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>missing &amp;amp;lt;ci&amp;amp;gt;:</mtext> 
      </mtd> 
      <mtd>
        <bvar></bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>missing &amp;amp;lt;ci&amp;amp;gt; w/ degree:</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <degree>
            <cn>2</cn> 
          </degree> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>2 &amp;amp;lt;ci&amp;amp;gt;s</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <ci>x</ci> 
          <ci>y</ci> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>2 w/ degree</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <ci>x</ci> 
          <ci>y</ci> 
          <degree>
            <cn>2</cn> 
          </degree> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>&amp;amp;#x003c;mi/&amp;amp;#x0003E;used</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <mi>x</mi> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>&amp;amp;#x003c;mi/&amp;amp;#x0003E;used w/ degree</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <mi>x</mi> 
          <degree>
            <cn>2</cn> 
          </degree> 
        </bvar> 
      </mtd> 
    </mtr> 
    <mtr>
      <mtd>
        <mtext>missing &amp;amp;lt;ci&amp;amp;gt;, 2 degrees</mtext> 
      </mtd> 
      <mtd>
        <bvar>
          <degree>
            <cn>4</cn> 
          </degree> 
          <degree>
            <cn>2</cn> 
          </degree> 
        </bvar> 
      </mtd> 
    </mtr> 
  </mtable> 
</math>